--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8">
+    <title>Главная | Основная страница</title>
+    <link rel="stylesheet" href="css/update.css">
+    <header>
+        <ul id="navbar">
+            <li><a href="#">Первая арка</a>
+                <ul>
+                  <li><a href="#target1" class="scroll-button">страница 1</a></li>
+                  <li><a href="#target2" class="scroll-button">страница 2</a></li>
+                  <li><a href="#target2" class="scroll-button">страница 3</a></li>
+                  <li><a href="#target2" class="scroll-button">страница 4</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Вторая арка</a>
+                <ul>
+                  <li><a href="#">Конусы</a></li>
+                  <li><a href="#">Реликвии</a></li>
+                </ul>
+              </li>
+            <li><a href="#">Третья арка</a>
+                <ul>
+                  <li><a href="#">Ярило-VI</a></li>
+                  <li><a href="#">Лофу Сяньчжоу</a></li>
+                  <li><a href="#">Космическая станция "Герта"</a></li>
+                </ul>
+              </li>        
+        </ul>
+        <form action="" method="get">
+            <input name="s" placeholder="Искать здесь..." type="search">
+            <button type="submit">Поиск</button>
+          </form>
+          <a href="#target1" class="scroll-button">страница 1</a>
+          <a href="#target2" class="scroll-button">страница 2</a>
+          <a href="#target3" class="scroll-button">страница 3</a>
+          <a href="#target4" class="scroll-button">страница 4</a>
+    </header>
+ </head>
+ <body>
 
+<div class="square-block">текст страницы 1
+      <div id="target1">страница 1</div>
+      <a href="#target2" class="scroll-button">страница 2</a>
+    </div>
+
+<div class="square-block2">текст страницы 2
+      <div id="target2">страница 2</div>
+      <a href="#target3" class="scroll-button">страница 3</a>
+    </div>
+
+<div class="square-block3">текст страницы 3
+      <div id="target3">страница 3</div>
+      <a href="#target4" class="scroll-button">страница 4</a>
+    </div>
+
+<div class="square-block4">текст страницы 4
+      <div id="target4">страница 4</div>
+    </div>
+
+ </body>
+</html>
