--- a/index.html
+++ b/index.html
@@ -2,62 +2,64 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Главная | Основная страница</title>
+    <title>destroyed world</title>
     <link rel="stylesheet" href="css/update.css">
     <header>
         <ul id="navbar">
-            <li><a href="#">Первая арка</a>
+            <li><a href="#">Episode 1</a>
                 <ul>
-                  <li><a href="#target1" class="scroll-button">страница 1</a></li>
-                  <li><a href="#target2" class="scroll-button">страница 2</a></li>
-                  <li><a href="#target2" class="scroll-button">страница 3</a></li>
-                  <li><a href="#target2" class="scroll-button">страница 4</a></li>
+                  <li><a href="#target1" class="scroll-button">1 page</a></li>
+                  <li><a href="#target2" class="scroll-button">2 page</a></li>
+                  <li><a href="#target2" class="scroll-button">3 page</a></li>
+                  <li><a href="#target2" class="scroll-button">4 page</a></li>
                 </ul>
               </li>
-              <li><a href="#">Вторая арка</a>
+              <li><a href="#">Episode 2</a>
                 <ul>
-                  <li><a href="#">Конусы</a></li>
-                  <li><a href="#">Реликвии</a></li>
+                  <li><a href="#">1</a></li>
                 </ul>
               </li>
-            <li><a href="#">Третья арка</a>
+            <li><a href="#">Episode 3</a>
                 <ul>
-                  <li><a href="#">Ярило-VI</a></li>
-                  <li><a href="#">Лофу Сяньчжоу</a></li>
-                  <li><a href="#">Космическая станция "Герта"</a></li>
+                  <li><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
                 </ul>
               </li>        
-        </ul>
-        <form action="" method="get">
-            <input name="s" placeholder="Искать здесь..." type="search">
-            <button type="submit">Поиск</button>
-          </form>
-          <a href="#target1" class="scroll-button">страница 1</a>
-          <a href="#target2" class="scroll-button">страница 2</a>
-          <a href="#target3" class="scroll-button">страница 3</a>
-          <a href="#target4" class="scroll-button">страница 4</a>
+            </ul>
+          <h11 id='main'>conquering the destroyed world</h11>
+          <div class="blockOpis">
+            <h12 id='main2'>Описание: В далеком и загадочном мире, где судьбу решает человек, произошло невероятное событие. 
+              Величественные королевства Инь и Янь столкнулись, отразив множество противоположностей и провалившись на острие лезвия судьбы.
+               Что могло стать причиной такой глубокой расколотости? Ведь теперь границы разделяли людей, находившимся по полностью противоположным путям. 
+               Со временем королевства укрепились и прошли сотни лет, но ни один человек из Инь так и не переступил порог Янь. Чем могло быть вызвано такое решение? Может быть, это было из-за страха или предубеждений, присущих обоим королевствам? Или, может быть, одержимость своим истинным путем не позволяла иным мыслям проникнуть на территорию Янь?</h12>
+          </div>
     </header>
  </head>
  <body>
+  <img src="img/67G8H987H8.jpg" style="position: relative; left: 35px; top:50px; width: 600px; border: 1px solid rgb(255, 255, 255);">
+  <img src="img/_b6647417-f681-4555-a043-190f78dd9007 (1).png" style="position: relative; top:-700px; left: 1120px; width: 900px;">
 
-<div class="square-block">текст страницы 1
+
+  <div class="square-block">текст страницы 1
       <div id="target1">страница 1</div>
-      <a href="#target2" class="scroll-button">страница 2</a>
+      <a href="#target2" class="scroll-button2">next page</a>
+      <img src="img/_c5d814c1-7081-4408-9bac-dfc328da0b50.jpg" style="position: relative; left: 30px; width: 580px; border: 1px solid rgb(255, 255, 255);">
     </div>
 
 <div class="square-block2">текст страницы 2
       <div id="target2">страница 2</div>
-      <a href="#target3" class="scroll-button">страница 3</a>
+      <a href="#target3" class="scroll-button2">next page</a>
+      <img src="img/_40103fae-af95-4dcd-b224-6bd29b6530db.jpg" style="position: relative; left: 30px; width: 580px; border: 1px solid rgb(255, 255, 255);">
     </div>
 
 <div class="square-block3">текст страницы 3
       <div id="target3">страница 3</div>
-      <a href="#target4" class="scroll-button">страница 4</a>
+      <a href="#target4" class="scroll-button2">next page</a>
     </div>
 
 <div class="square-block4">текст страницы 4
       <div id="target4">страница 4</div>
     </div>
-
  </body>
 </html>
