--- a/index.html
+++ b/index.html
@@ -37,20 +37,19 @@
     </header>
  </head>
  <body>
-  <img src="img/67G8H987H8.jpg" style="position: relative; left: 35px; top:50px; width: 600px; border: 1px solid rgb(255, 255, 255);">
-  <img src="img/_b6647417-f681-4555-a043-190f78dd9007 (1).png" style="position: relative; top:-700px; left: 1120px; width: 900px;">
-
+  <img src="image/1.jpg" style="position: relative; left: 35px; top:50px; width: 600px; border: 1px solid rgb(255, 255, 255);">
+  <img src="image/_b6647417-f681-4555-a043-190f78dd9007 (1).png" style="position: relative; top:-700px; left: 1120px; width: 900px;">
 
   <div class="square-block">текст страницы 1
       <div id="target1">страница 1</div>
       <a href="#target2" class="scroll-button2">next page</a>
-      <img src="img/_c5d814c1-7081-4408-9bac-dfc328da0b50.jpg" style="position: relative; left: 30px; width: 580px; border: 1px solid rgb(255, 255, 255);">
+      <img src="image/1e.jpg" style="position: relative; left: 30px; width: 580px; border: 1px solid rgb(255, 255, 255);">
     </div>
 
 <div class="square-block2">текст страницы 2
       <div id="target2">страница 2</div>
       <a href="#target3" class="scroll-button2">next page</a>
-      <img src="img/_40103fae-af95-4dcd-b224-6bd29b6530db.jpg" style="position: relative; left: 30px; width: 580px; border: 1px solid rgb(255, 255, 255);">
+      <img src="image/2e.jpg" style="position: relative; left: 30px; width: 580px; border: 1px solid rgb(255, 255, 255);">
     </div>
 
 <div class="square-block3">текст страницы 3
