--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </ul>
           <h11 id='main'>conquering the destroyed world</h11>
           <div class="blockOpis">
-            <h12 id='main2'>Описание: В далеком и загадочном мире, где судьбу решает человек, произошло невероятное событие. 
-              Величественные королевства Инь и Янь столкнулись, отразив множество противоположностей и провалившись на острие лезвия судьбы.
-               Что могло стать причиной такой глубокой расколотости? Ведь теперь границы разделяли людей, находившимся по полностью противоположным путям. 
-               Со временем королевства укрепились и прошли сотни лет, но ни один человек из Инь так и не переступил порог Янь. Чем могло быть вызвано такое решение? Может быть, это было из-за страха или предубеждений, присущих обоим королевствам? Или, может быть, одержимость своим истинным путем не позволяла иным мыслям проникнуть на территорию Янь?</h12>
+            <h12 id='main2'>Описание: В далеком и загадочном мире, где судьбу решает человек, произошло неожиданное событие. Величественные королевства Белое Инь и Черный Янь столкнулись,
+                множество противоположностей и споров повлияло на острое лезвие судьбы. Ведь теперь границы разделяли людей, отправлявшихся по полностью противоположным путям. Со временем
+                королевства укрепились и пошло много лет, но ни один человек из Инь так и не переступил порог Янь. Чем могло быть вызвано такое решение? Может быть, это было из-за страха 
+                или предубеждений, присущих обоим королевствам? Или, может быть, одержимость своим истинным путям, не позволяла проникнуть на территорию Янь? Кацуми предстоит всё узнать и изменить!</h12>
           </div>
     </header>
  </head>
