--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="blockOpis">
             <h12 id='main2'>Описание: В далеком и загадочном мире, где судьбу решает человек, произошло неожиданное событие. Величественные королевства Белое Инь и Черный Янь столкнулись,
                 множество противоположностей и споров повлияло на острое лезвие судьбы. Ведь теперь границы разделяли людей, отправлявшихся по полностью противоположным путям. Со временем
-                королевства укрепились и пошло много лет, но ни один человек из Инь так и не переступил порог Янь. Чем могло быть вызвано такое решение? Может быть, это было из-за страха 
+                королевства укрепились и прошло много лет, но ни один человек из Инь так и не переступил порог Янь. Чем могло быть вызвано такое решение? Может быть, это было из-за страха 
                 или предубеждений, присущих обоим королевствам? Или, может быть, одержимость своим истинным путям, не позволяла проникнуть на территорию Янь? Кацуми предстоит всё узнать и изменить!</h12>
           </div>
     </header>
