--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  </head>
  <body>
   <img src="image/1.jpg" style="position: relative; left: 35px; top:50px; width: 600px; border: 1px solid rgb(255, 255, 255);">
-  <img src="image/_b6647417-f681-4555-a043-190f78dd9007 (1).png" style="position: relative; top:-700px; left: 1120px; width: 900px;">
+  <img src="image/2.png" style="position: relative; top:-700px; left: 1120px; width: 900px;">
 
   <div class="square-block">текст страницы 1
       <div id="target1">страница 1</div>
