--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <link rel="icon" type="image/png" href="image/4.png">
     <meta charset="utf-8">
     <title>destroyed world</title>
     <link rel="stylesheet" href="css/update.css">
