--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="icon" type="image/png" href="image/4.png">
+  <link rel="icon" type="image/png" href="image/4.png">
     <meta charset="utf-8">
     <title>destroyed world</title>
     <link rel="stylesheet" href="css/update.css">
@@ -35,12 +35,17 @@
                 королевства укрепились и прошло много лет, но ни один человек из Инь так и не переступил порог Янь. Чем могло быть вызвано такое решение? Может быть, это было из-за страха 
                 или предубеждений, присущих обоим королевствам? Или, может быть, одержимость своим истинным путям, не позволяла проникнуть на территорию Янь? Кацуми предстоит всё узнать и изменить!</h12>
           </div>
+
+         <div class="blocknew1">
+            <a href="#target1" class="scroll-button">Читать историю</a>
+          </div>
+
     </header>
  </head>
  <body>
 
-  <img src="image/1.jpg" style="position: relative; left: 35px; top:50px; width: 600px; border: 1px solid rgb(255, 255, 255);">
-  <img src="image/2.png" style="position: relative; top:-700px; left: 1120px; width: 900px;">
+  <img src="image/1.jpg" style="position: relative; left: 35px; top:10px; width: 600px; border: 1px solid rgb(255, 255, 255);">
+  <img src="image/2.png" style="position: relative; top:-752px; left: 1120px; width: 900px;">
 
   <div class="square-block">текст страницы 1
       <div id="target1">страница 1</div>
@@ -64,4 +69,5 @@
     </div>
  </body>
 </html>
+
 
