--- a/index.html
+++ b/index.html
@@ -5,58 +5,57 @@
     <meta charset="utf-8">
     <title>destroyed world</title>
     <link rel="stylesheet" href="css/update.css">
-    <header>
-        <ul id="navbar">
-            <li><a href="#">Episode 1</a>
-                <ul>
-                  <li><a href="#target1" class="scroll-button">1 page</a></li>
-                  <li><a href="#target2" class="scroll-button">2 page</a></li>
-                  <li><a href="#target2" class="scroll-button">3 page</a></li>
-                  <li><a href="#target2" class="scroll-button">4 page</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Episode 2</a>
-                <ul>
-                  <li><a href="#">1</a></li>
-                </ul>
-              </li>
-            <li><a href="#">Episode 3</a>
-                <ul>
-                  <li><a href="#">1</a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                </ul>
-              </li>        
+</head>
+  <header>
+    <ul id="navbar">
+        <li><a href="#">Episode 1</a>
+            <ul>
+              <li><a href="#target1" class="scroll-button">1 page</a></li>
+              <li><a href="#target2" class="scroll-button">2 page</a></li>
+              <li><a href="#target2" class="scroll-button">3 page</a></li>
+              <li><a href="#target2" class="scroll-button">4 page</a></li>
             </ul>
-          <h11 id='main'>conquering the destroyed world</h11>
-          <div class="blockOpis">
-            <h12 id='main2'>Описание: В далеком и загадочном мире, где судьбу решает человек, произошло неожиданное событие. Величественные королевства Белое Инь и Черный Янь столкнулись,
-                множество противоположностей и споров повлияло на острое лезвие судьбы. Ведь теперь границы разделяли людей, отправлявшихся по полностью противоположным путям. Со временем
-                королевства укрепились и прошло много лет, но ни один человек из Инь так и не переступил порог Янь. Чем могло быть вызвано такое решение? Может быть, это было из-за страха 
-                или предубеждений, присущих обоим королевствам? Или, может быть, одержимость своим истинным путям, не позволяла проникнуть на территорию Янь? Кацуми предстоит всё узнать и изменить!</h12>
-          </div>
+        </li>
+          <li><a href="#">Episode 2</a>
+              <ul>
+                <li><a href="#">1</a></li>
+              </ul>
+          </li>
+          <li><a href="#">Episode 3</a>
+              <ul>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+              </ul>
+          </li>        
+      </ul>
 
-         <div class="blocknew1">
-            <a href="#target1" class="scroll-button">Читать историю</a>
-          </div>
+<h11 id='main'>conquering the destroyed world</h11>
 
-    </header>
- </head>
- <body>
+  <div class="blockOpis">
+      <h12 id='main2'> "ЗАВОЕВАНИЕ СЛОМАННОГО МИРА" Описание: В далеком и загадочном мире, где судьбу решает человек, произошло неожиданное событие. Величественные королевства Белое Инь и Черный Янь столкнулись, множество противоположностей и споров повлияло на острое лезвие судьбы. Ведь теперь границы разделяли людей, отправлявшихся по полностью противоположным путям. Со временем королевства укрепились и прошло много лет, но ни один человек из Инь так и не переступил порог Янь. Чем могло быть вызвано такое решение? Может быть, это было из-за страха или предубеждений, присущих обоим королевствам? Или, может быть, одержимость своим истинным путям, не позволяла проникнуть на территорию Янь? Кацуми предстоит всё узнать и изменить!</h12>
+  </div>
 
-  <img src="image/1.jpg" style="position: relative; left: 35px; top:10px; width: 600px; border: 1px solid rgb(255, 255, 255);">
-  <img src="image/2.png" style="position: relative; top:-752px; left: 1120px; width: 900px;">
+  <div class="blocknew1">
+    <a href="#target1" class="scroll-button">Читать историю</a>
+  </div>
+</header>
+<body>
 
-  <div class="square-block">текст страницы 1
-      <div id="target1">страница 1</div>
-      <a href="#target2" class="scroll-button2">next page</a>
-      <img src="image/1e.jpg" style="position: relative; left: 30px; width: 580px; border: 1px solid rgb(255, 255, 255);">
-    </div>
+<img src="image/1.jpg" style="position: relative; left: 35px; top:10px; width: 600px; border: 1px solid rgb(255, 255, 255);">
+<img src="image/2.png" style="position: relative; top:-752px; left: 1120px; width: 900px;">
+
+<div class="square-block">
+  <div id="target1">1 page</div>
+  <img src="image/1e.jpg" class="leftfoto">
+    Что вершит судьбу человечества? Жизнь или ожидание смерти - заставляет тебя двигаться дальше? Однажды и ты сможешь пройти свой путь до конца. Но сможешь ли ты вспомнить все моменты своей жизни после её окончания? Какой в этом тогда смысл? Почему у каждого живого существа есть свои рамки в мире? Кто-то может плавать, а кто-то летать. Почему люди должны сидеть взаперти - как птицы в клетках, ведь пташки могут летать, но человек ограничил им доступ к свободе. "Почему я должен сидеть в этой тупой стереотипной для людей клетке, во избежание опасности, которой не было уже много лет, быть может ничего и не существует на той стороне?"- Подумал Кацуми. В юношеские годы, мама рассказала мне историю об этом большом загадочном мире:В далеком и загадочном мире, где судьбу решает человек, произошло неожиданное событие. Величественные королевства Белое Инь и Черный Янь столкнулись, множество противоположностей и споров повлияло на острое лезвие судьбы. Ведь теперь границы разделяли людей, отправлявшихся по полностью противоположным путям. Со временем королевства укрепились и пошло много лет, но ни один человек из Инь так и не переступил порог Янь. Чем могло быть вызвано такое решение? Может быть, это было из-за страха или предубеждений, присущих обоим королевствам? Или, может быть, одержимость своим истинным путям, не позволяла проникнуть на территорию Янь? Для обычных людей Король нашего королевства не уточнил, но думаю тебе предстоит всё узнать мой любимый сынок. Мы с папой тебе в этом поможем. И именно после этих слов, от мамы странно стало веять чем то волшебным и необычным, не знаю на что это было похоже, но я не придал этому значения.
+    <a href="#target2" class="scroll-button2">next page</a>
+  </div>
 
 <div class="square-block2">текст страницы 2
       <div id="target2">страница 2</div>
       <a href="#target3" class="scroll-button2">next page</a>
-      <img src="image/2e.jpg" style="position: relative; left: 30px; width: 580px; border: 1px solid rgb(255, 255, 255);">
+      <img src="image/2e.jpg" class="leftfoto">
     </div>
 
 <div class="square-block3">текст страницы 3
@@ -69,5 +68,3 @@
     </div>
  </body>
 </html>
-
-
