--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
             <ul>
               <li><a href="#target1" class="scroll-button">1 page</a></li>
               <li><a href="#target2" class="scroll-button">2 page</a></li>
-              <li><a href="#target2" class="scroll-button">3 page</a></li>
-              <li><a href="#target2" class="scroll-button">4 page</a></li>
+              <li><a href="#target3" class="scroll-button">3 page</a></li>
+              <li><a href="#target4" class="scroll-button">4 page</a></li>
             </ul>
         </li>
           <li><a href="#">Episode 2</a>
               <ul>
-                <li><a href="#">1</a></li>
+                <li><a href="#" class="scroll-button">Coming Soon</a></li>
               </ul>
           </li>
           <li><a href="#">Episode 3</a>
               <ul>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
+                <li><a href="#" class="scroll-button">Coming Soon</a></li>
               </ul>
           </li>        
       </ul>
@@ -37,12 +35,12 @@
   </div>
 
   <div class="blocknew1">
-    <a href="#target1" class="scroll-button">Читать историю</a>
+    <a href="#target1" class="scroll-button3">Читать историю</a>
   </div>
 </header>
 <body>
 
-<img src="image/1.jpg" style="position: relative; left: 35px; top:10px; width: 600px; border: 1px solid rgb(255, 255, 255);">
+<img src="image/1.jpg" class="fototop" style="position: relative; left: 35px; top:10px; width: 600px; border: 1px solid rgb(255, 255, 255);">
 <img src="image/2.png" style="position: relative; top:-752px; left: 1120px; width: 900px;">
 
 <div class="square-block">
@@ -76,3 +74,4 @@
     </div>
  </body>
 </html>
+
